# NemoSim

./: .gitignore  CMakeLists.txt  Ceva_Nemo_Simulator_User_Guide_V1.1.docx  Ceva_Nemo_Simulator_User_Guide_V1.2.docx  Ceva_Nemo_Simulator_User_Guide_V1.3.docx  Ceva_Nemo_Simulator_User_Guide_V1.4.docx  LIF_neuron.cpp  NEMOEngine.cpp  NEMOEngine.hpp  README.md  XMLParser.cpp  XMLParser.hpp  cmakeLinux.csh  cmakeVisualStudio.bat  create-release.bat  create-release.csh  main.cpp  networkParams.hpp
ANNNetwoek/: ANNLayer.hpp  ANNNetwork.hpp  ANNNeuron.cpp  ANNNeuron.hpp  CMakeLists.txt
BIUNetwork/: BIULayer.cpp  BIULayer.hpp  BIUNetwork.cpp  BIUNetwork.hpp  BIUNeuron.cpp  BIUNeuron.hpp  CMakeLists.txt  plot_vn_to_dt.py
Doc/: basic input and output.pptx  readme.txt  ~$basic input and output.pptx
LIFNetwork/: CMakeLists.txt  DAC.cpp  DAC.h  LIFLayer.cpp  LIFLayer.h  LIFLayer.hpp  LIFNetwork.cpp  LIFNetwork.h  LIFNetwork.hpp  LIFNeuron.cpp  LIFNeuron.h  LIFNeuron.hpp  LIF_neuron.cpp  LIF_neuron.h  YFlash.cpp  YFlash.h  main.cpp  plot_vm_to_dt.py
NielNetwork/: CMakeLists.txt  NielLayer.cpp  NielLayer.hpp  NielNetwork.cpp  NielNetwork.hpp  NielNeuron.cpp  NielNeuron.hpp  main.cpp
Src/ANNNetwork/: ANNNetwork.cpp  ANNNetwork.hpp  CMakeLists.txt
Src/BIUNetwork/: BIULayer.cpp  BIULayer.hpp  BIUNetwork.cpp  BIUNetwork.hpp  BIUNeuron.cpp  BIUNeuron.hpp  CMakeLists.txt  EnergyTable.cpp  EnergyTable.hpp  plot_vn_to_dt.py
Src/Common/: BaseNetwork.cpp  BaseNetwork.hpp  XMLParser.cpp  XMLParser.hpp
Src/DS/: CMakeLists.txt  DS.cpp  DS.hpp
Src/LIFNetwork/: CMakeLists.txt  LIFLayer.cpp  LIFLayer.hpp  LIFNetwork.cpp  LIFNetwork.hpp  LIFNeuron.hpp  NEMOEngine.cpp  input_creator.py
Src/NemoSimEngine/: CMakeLists.txt  NEMOEngine.cpp  NEMOEngine.hpp  main.cpp  networkParams.hpp
Src/YFlash/: ANNYFlash.cpp  ANNYFlash.hpp  CMakeLists.txt  YFlash.cpp  YFlash.hpp
Tests/: postBuildTester.py
Tests/ANN/: config.json  input.txt  test.xml
Tests/SNN/BIU/: Energy_Neuron_CSV_Content.csv  Spike-in_vs_Not_spike-in.csv  Spikes-300.txt  Spikes-400.txt  Spikes.txt  Vns-300.txt  Vns-400.txt  Vns.txt  biunet.xml  config.json  input.txt  input2.txt  supervisor.xml  test.xml  test2.xml
Tests/SNN/BIU/output_directory/: spikes0_0.txt  vns0_0.txt
Tests/SNN/LIF/: test1.xml
Tests/SNN/LIF/sin_current_test/: Iins.txt  config.json  lifnet.xml  test.xml  testFull.xml  twoSmallLayers.xml
Tests/SNN/LIF/step_current_test/: Vouts.txt  config.json  test.xml  vms.txt
Tests/SNN/LIF/test1/: input.txt  test.xml
Tests/SNN/LIF/test2/: Vouts.txt  Vouts_ref.txt  test.xml  vms.txt  vms_ref.txt
YFlash/: YFlash.hpp
_build64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  LIFNetworkSimulation.sln  LIFNetworkSimulation.vcxproj  LIFNetworkSimulation.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  output_signal.txt
_build64/LIFNetworkSimulation.dir/Debug/: LIFNetworkSimulation.exe.recipe  LIFNetworkSimulation.ilk  vc142.ib_pdb_index  vc142.idb
_build64/LIFNetworkSimulation.dir/Debug/LIFNetwo.CD257183.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  LIFNetworkSimulation.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
_build64/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
_build64/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
inputFiles/: LayerConfig.xml
